--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,python
 
 .env
+models
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
